queda el ejercicio 5

--- a/Tema 12/12-Ejercicios/12-Ejercicio4y5/wwwroot/html/ejer4.html
+++ b/Tema 12/12-Ejercicios/12-Ejercicio4y5/wwwroot/html/ejer4.html
@@ -2,9 +2,37 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Ejercicio 4</title>
+    <script src="../js/ejer4.js"></script>
 </head>
 <body>
+    <table border="1" id="tabla">
+        <tr>
+            <td>
+                Celda 1.1
+            </td>
+            <td>
+                Celda 1.2
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Celda 2.1
+            </td>
+            <td>
+                Celda 2.2
+            </td>
+        </tr>
+    </table>
+
+    <br>
+    <input type="button" id="btnRecorrer" value="Recorre Celdas">
+    <br>
+    <br>
+    <input type="button" id="btnAnadir" value="Anadir Fila">
+    <br>
+    <br>
+    <input type="button" id="btnBorrar" value="Borrar Fila">
 
 </body>
 </html>
