--- a/Tema 12/12-Ejercicios/12-Ejercicio4y5/wwwroot/html/ejer5.html
+++ b/Tema 12/12-Ejercicios/12-Ejercicio4y5/wwwroot/html/ejer5.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Ejercicio 5</title>
+    <script src="../js/ejer5.js"></script>
 </head>
 <body>
-
+    <img src="../img/0.gif" id="digito1Hora" /><img src="../img/0.gif" id="digito2Hora" /><img src="../img/dosPuntos.gif" id="dosPuntosHM" /><img src="../img/0.gif" id="digito1Minutos" /><img src="../img/0.gif" id="digito2Minutos" /><img src="../img/dosPuntos.gif" id="dosPuntosMS" /><img src="../img/0.gif" id="digito1Segundos" /><img src="../img/0.gif" id="digito2Segundos" />
 </body>
 </html>
