--- a/Tema 13/13-Ejercicios/13-Ejercicios/wwwroot/html/ejer3.html
+++ b/Tema 13/13-Ejercicios/13-Ejercicios/wwwroot/html/ejer3.html
@@ -2,13 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Ejercicio2</title>
+    <title></title>
     <script src="../js/ejer3.js"></script>
 </head>
 <body>
-    <img src="/img/ZWdx.gif"  id="imgCargar" height="100">
-    <table border="1" id="table">
-        
+    <img src="" id="barra" width="100"/>
+    <table id="tabla">
+        <tr>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Nombre departamento</th>
+        </tr>
     </table>
 </body>
 </html>
