--- a/Tema 13/13-Ejercicios/13-Ejercicios/wwwroot/html/ejer3.html
+++ b/Tema 13/13-Ejercicios/13-Ejercicios/wwwroot/html/ejer3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Ejercicio 3</title>
     <script src="../js/ejer3.js"></script>
 </head>
 <body>
