--- a/Prueba/index.html
+++ b/Prueba/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
-    <script src="ejemplo.js"></script>
+    <script src="ejemplos.js"></script>
     </head>
     <body>
-
+        <input type="text" id="idPersona"/>
+        <input type="button" id="btnBorrar" value="Borrar Persona"/>
+        <div id="divResultado"></div>
     </body>
 </html>
